# password_expiration_alarms

./: .env_template  .gitignore  README.md  alarm_template.txt  pyproject.toml
notifier/: __init__.py  ad.py  config.py  email.py  user.py  utils.py
notifier/ad/: __init__.py
notifier/config/: __init__.py
notifier/email/: __init__.py
notifier/scripts/: main.py
notifier/user/: __init__.py
tests/: test_email.py
