[project]
name = "pwdexpirealarms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
]

[project.scripts]
norifier = "norifier.scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["norifier"]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]